--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-04-17T11%3A26%3A46.553Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-04-17T11%3A32%3A44.173Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -161,7 +161,7 @@
                     <div class="col-12 col-md-6" style="font-family: 'Patrick Hand', cursive;font-size: 1.2em;color: #333;letter-spacing: .03em;">
                         <p>
                             Dès votre arrivée au chalet Le Panoramique, vous serez saisis par sa splendide et grandiose vue sur les montagnes environnantes.
-Situé à 1200m d'altitude, le chalet surplombe le charmant village de Mizoën.
+Situé à 1200 m d'altitude, le chalet surplombe le charmant village de Mizoën.
 Admirer le panorama depuis sa grande terrasse ou votre balcon privé va devenir votre activité principale.
                         </p>
                         <p>
@@ -321,7 +321,7 @@ Le restaurant n'est ouvert que le soir pour le diner.
                         <h3 class="card-title">Le bar</h3>
                         <div class="card-body">
                             <p>
-                                J'ai choisi de vous offrir une large sélection de boisons exclusivement locales.
+                                J'ai choisi de vous offrir une large sélection de boissons exclusivement locales.
 Une occasion unique de découvrir des bières de notre région mais aussi des alcools tels du gin, du whisky sans oublier notre Chartreuse mondialement connue.
 Bien entendu vous trouverez également de la limonade, des jus de fruit, du cola et tant d'autres boissons artisanales.
                             </p>
@@ -350,7 +350,7 @@ Bien entendu vous trouverez également de la limonade, des jus de fruit, du cola
                                 <h3 class="card-title">Cyclotourisme</h3>
                                 <p>
                                     L'Oisans est incontestablement un coin de paradis pour le cyclisme.
-    Vous pourrez vous exercer sur les routes empruntées par le Tour de France et participer à des courses tels la prestigieuse course de la Marmotte.
+    Vous pourrez vous exercer sur les routes empruntées par le Tour de France et participer à des courses telles que la prestigieuse course de la Marmotte.
     Autour de vous le col du Glandon, le col du Télégraphe, le col du Lautaret, le col du Galibier ou encore les fameuses boucles de l'Alpe d'Huez vous promettent des sorties riches en souvenir.
     Le chalet Le Panoramique est labellisé « Accueil Cyclo Oisans ».
                                 </p>
@@ -367,7 +367,7 @@ Bien entendu vous trouverez également de la limonade, des jus de fruit, du cola
                             <div class="card-body">
                                 <h3 class="card-title">Randonnées et balades</h3>
                                 <p>
-                                    Un océan de verdure, calme et reposant, au cœur des reliefs escarpés de l'Oisans, vous réserve des escapades riches en émerveillement et émotions, que vous soyez à cheval ou à pied : le Plateau d'Emparis classé Natura 2000 et ses lac Lérié et le lac Noir, la Croix de Cassini, le barrage du Chambon, le Lac des Quirlies, le Pic du Mas de la Grave...
+                                    Un océan de verdure, calme et reposant, au cœur des reliefs escarpés de l'Oisans, vous réserve des escapades riches en émerveillement et émotions, que vous soyez à cheval ou à pied : le Plateau d'Emparis classé Natura 2000 et son lac Lérié et le lac Noir, la Croix de Cassini, le barrage du Chambon, le Lac des Quirlies, le Pic du Mas de la Grave...
 Les GR50 et GR54 sont à proximité du chalet.
                                 </p>
                             </div>
@@ -383,9 +383,9 @@ Les GR50 et GR54 sont à proximité du chalet.
                             <div class="card-body">
                                 <h3 class="card-title">VTT</h3>
                                 <p>
-                                    Rejoignez une boucle de 36 kms et découvrez le Plateau d'Emparis qui offre des paysages fabuleux, des prairies fleuries à perte de vue avec en toile de fond La Meije et ses glaciers, le tout à environ 2000 m d'altitude.
+                                    Rejoignez une boucle de 36 km et découvrez le Plateau d'Emparis qui offre des paysages fabuleux, des prairies fleuries à perte de vue avec en toile de fond La Meije et ses glaciers, le tout à environ 2000 m d'altitude.
 Par le Col de Sarenne grimpez à l'Alpe d'Huez et faites le tour de La Garde.
-Mais aussi le chemin des Demoiselles des Deux Alpes ou sa spectaculaire descente de 2600m de dénivelé vers Venosc, la descente du Pic Blanc de l'Alpe d'Huez, et tant d'autres.
+Mais aussi le chemin des Demoiselles des 2 Alpes ou sa spectaculaire descente de 2600 m de dénivelé vers Venosc, la descente du Pic Blanc de l'Alpe d'Huez, et tant d'autres.
                                 </p>
                             </div>
                         </div>
@@ -400,7 +400,7 @@ Mais aussi le chemin des Demoiselles des Deux Alpes ou sa spectaculaire descente
                             <div class="card-body">
                                 <h3 class="card-title">Ski d'été</h3>
                                 <p>
-                                    Les skieurs ne seront pas en reste, puisque même en été, Les Deux Alpes vous accueille sur le Glacier du Dôme de la Lauze où même les débutants trouveront des pistes faciles.
+                                    Les skieurs ne seront pas en reste, puisque même en été, Les 2 Alpes vous accueille sur le Glacier du Dôme de la Lauze où même les débutants trouveront des pistes faciles.
 C'est aussi une belle occasion lors de votre séjour estival de découvrir cette activité et pourquoi pas, revenir au chalet en hiver pour découvrir la richesse des domaines skiables environnants.
                                 </p>
                             </div>
@@ -432,7 +432,7 @@ Vous aurez tant à faire en Oisans, que ce soit juste éveiller votre curiosité
                             <div class="card-body">
                                 <h3 class="card-title">Et tant d'autres activités montagne...</h3>
                                 <p>
-                                    Amis bikers, sachez que le territoire est parfait pour vos balades, tel le Grand Marathon, 260km des plus belles routes de l'Oisans.
+                                    Amis bikers, sachez que le territoire est parfait pour vos balades, tel le Grand Marathon, 260 km des plus belles routes de l'Oisans.
 Sport, bien-être, nombreux sont les professionnels qui ont choisi nos montagnes pour exercer : alors nous vous attendons !
 Vous trouverez aussi des marchés, véritables tableaux vivants de la vie locale.
 Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
@@ -462,10 +462,10 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
                                     Station de ski phare du département de l'Isère, Les 2 Alpes jouit d'une réputation internationale.
                                 </p>
                                 <p>
-                                    Avec une neige naturelle garantie grâce au glacier culminant à 3600m d'altitude, vous avez l'assurance de skier en toute saison.
+                                    Avec une neige naturelle garantie grâce au glacier culminant à 3600 m d'altitude, vous avez l'assurance de skier en toute saison.
 Ce domaine skiable est un véritable paradis de la glisse qui s'étend sur 410 hectares de pistes balisées.
-C'est l'un des plus hauts sommets skiables des Alpes avec un dénivelé maximum de 2300m négatif.
-Sa verticalité permet d'enchaîner les virages sur une piste partant du glacier à 3600m et allant jusqu'au village de Mont de Lans à 1300m.
+C'est l'un des plus hauts sommets skiables des Alpes avec un dénivelé maximum de 2300 m négatif.
+Sa verticalité permet d'enchaîner les virages sur une piste partant du glacier à 3600 m et allant jusqu'au village de Mont de Lans à 1300 m.
 Le tout sans utiliser une seule fois les remontées mécaniques.
                                 </p>
                             </div>
@@ -485,7 +485,7 @@ Le tout sans utiliser une seule fois les remontées mécaniques.
                                 <p>
                                     Vous êtes plutôt sportif ?
 Le VTT sur neige, le trail, le ski de randonnée, le parapente sont faits pour vous !
-Essayez une activité insolite et venez sauter sur l'Air Bag, visiter la grotte de glace, marcher sur la passerelle dans le vide du Belvédère à 3400m tout en admirant les paysages sur les sommets enneigés... c'est à couper le souffle !
+Essayez une activité insolite et venez sauter sur l'Air Bag, visiter la grotte de glace, marcher sur la passerelle dans le vide du Belvédère à 3400 m tout en admirant les paysages sur les sommets enneigés... c'est à couper le souffle !
 Vous préférez peut-être les espaces bien être et la remise en forme, les promenades en raquettes, la patin à glace, les descentes de luges... à vous de choisir !
                                 </p>
                             </div>
@@ -496,9 +496,9 @@ Vous préférez peut-être les espaces bien être et la remise en forme, les pro
                             <div class="card-body">
                                 <p>
                                 <ul style="text-align:left">
-                                    <li>les Deux Alpes à 3km (200km de pistes, 2500m de dénivelé grâce au glacier, un enneigement permanent);</li>
-                                    <li>l'Alpe d'Huez à 15km (220km de pistes, 2200m de dénivelé avec la descente de 16 km du Pic Blanc par Sarenne);</li>
-                                    <li>la Grave-La Meije à 15km avec son sommet à 3983m d'altitude;</li>
+                                    <li>les 2 Alpes à 3 km (200 km de pistes, 2500 m de dénivelé grâce au glacier, un enneigement permanent) ;</li>
+                                    <li>l'Alpe d'Huez à 15 km (220 km de pistes, 2200 m de dénivelé avec la descente de 16 km du Pic Blanc par Sarenne) ;</li>
+                                    <li>la Grave-La Meije à 15 km avec son sommet à 3983 m d'altitude ;</li>
                                     <li>le domaine de Serre Chevalier à environ 40 minutes de route.</li>
                                 </ul>
                                 </p>
@@ -514,9 +514,9 @@ Vous préférez peut-être les espaces bien être et la remise en forme, les pro
                             <div class="card-body">
                                 <p>
                                 <ul style="text-align:left">
-                                    <li>des prix plus attractifs qu'un hôtel ⋆⋆⋆ au pied des pistes pour un service de qualité et un accueil chaleureux, loin de « l'industrie du ski » en station;</li>
-                                    <li>l'occasion de découvrir 4 domaines skiables d'importance durant votre séjour;</li>
-                                    <li>des séjours flexibles que ce soit pour un week-end, pour quelques jours ou plusieurs semaines, choisissez le jour de votre arrivée;</li>
+                                    <li>des prix plus attractifs qu'un hôtel ⋆⋆⋆ au pied des pistes pour un service de qualité et un accueil chaleureux, loin de « l'industrie du ski » en station ;</li>
+                                    <li>l'occasion de découvrir 4 domaines skiables d'importance durant votre séjour ;</li>
+                                    <li>des séjours flexibles que ce soit pour un week-end, pour quelques jours ou plusieurs semaines, choisissez le jour de votre arrivée ;</li>
                                     <li>le service Skipass vous permettant d'acheter vos forfaits journaliers à des tarifs remisés.</li>
                                 </ul>
                                 </p>
@@ -911,7 +911,7 @@ Vous préférez peut-être les espaces bien être et la remise en forme, les pro
     </footer>
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-04-17T11%3A26%3A46.553Z"></script>
+    <script src="script/page.js?v=2023-04-17T11%3A32%3A44.173Z"></script>
 </body>
 
 </html>
