--- a/website/index.html
+++ b/website/index.html
@@ -10,13 +10,13 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-04-17T11%3A32%3A44.173Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-04-17T12%3A14%3A02.346Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="lang-fr">
     <header style="position:fixed">
         <nav>
             <div class="navbar-container navbar-width d-flex flex-row justify-content-between align-items-center">
@@ -73,7 +73,7 @@
 
     <main>
         <section id="site-hero" class="d-flex justify-content-between flex-column header-background" style="background-position: center 0px;user-select: none;">
-            <div id="hero-text" class="container text-white d-flex flex-column" style="padding-top:100px">
+            <div id="hero-text" class="container text-white d-flex flex-column">
                 <div class="text-uppercase d-block" style="line-height:1em;font-size:.3em;letter-spacing:.2em;padding-left:.1em">
                     Bienvenue au chalet hôtel
                 </div>
@@ -83,6 +83,10 @@
                 <div class="text-uppercase d-block text-center" style="line-height:1em;font-size:.25em;letter-spacing:.15em;padding-left:.1em;padding-top:1em">
                     Vallée du Ferrand · Mizöen · Les 2 Alpes
                 </div>
+                <span id="lang-block">
+                    <a id="lang-fr" class="lang-item" href="/">fr</a>
+                    <a id="lang-en" class="lang-item" href="/index_en.html">en</a>
+                </span>
             </div>
 
             <a href="https://www.bike-oisans.com" target="_blank">
@@ -911,7 +915,7 @@ Vous préférez peut-être les espaces bien être et la remise en forme, les pro
     </footer>
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-04-17T11%3A32%3A44.173Z"></script>
+    <script src="script/page.js?v=2023-04-17T12%3A14%3A02.346Z"></script>
 </body>
 
 </html>
