--- a/src/html/index.html
+++ b/src/html/index.html
@@ -541,19 +541,18 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5">Site en construction</h1>
+                    <h1 class="modal-title fs-5">#=(popup_title)</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
                 </div>
                 <div class="modal-body">
                     <p>
-                        Merci pour votre visite 🙂.
-                        Ce site est en construction.
+                        #=(popup_p1)
                     </p>
                     <p>
-                        Pour toute demande au sujet du logis-hôtel « Le Panoramique » à Mizoën, merci de passer par le site web existant: <a href="https://hotel-en-oisans.com">hotel-en-oisans.com</a>.
+                        #=(popup_p2) <a href="https://hotel-en-oisans.com">hotel-en-oisans.com</a>.
                     </p>
                     <p>
-                        À très bientôt.
+                        #=(popup_p3)
                     </p>
                 </div>
                 <div class="modal-footer">
