--- a/website/index_en.html
+++ b/website/index_en.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-04-17T12%3A14%3A02.346Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-04-17T12%3A30%3A14.969Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -575,19 +575,19 @@ You may prefer well-being and fitness areas, snowshoe walks, ice skating, tobogg
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5">Site en construction</h1>
+                    <h1 class="modal-title fs-5">Website under construction</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
                 </div>
                 <div class="modal-body">
                     <p>
-                        Merci pour votre visite 🙂.
-                        Ce site est en construction.
+                        Hello, nice to see you here 🙂.
+This website is under construction.
                     </p>
                     <p>
-                        Pour toute demande au sujet du logis-hôtel « Le Panoramique » à Mizoën, merci de passer par le site web existant: <a href="https://hotel-en-oisans.com">hotel-en-oisans.com</a>.
+                        For your requests about chalet « Le Panoramique » at Mizoën, France, please use the existing website: <a href="https://hotel-en-oisans.com">hotel-en-oisans.com</a>.
                     </p>
                     <p>
-                        À très bientôt.
+                        See you very soon.
                     </p>
                 </div>
                 <div class="modal-footer">
@@ -914,7 +914,7 @@ You may prefer well-being and fitness areas, snowshoe walks, ice skating, tobogg
     </footer>
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-04-17T12%3A14%3A02.346Z"></script>
+    <script src="script/page.js?v=2023-04-17T12%3A30%3A14.969Z"></script>
 </body>
 
 </html>
