Better EN translations

--- a/website/index_en.html
+++ b/website/index_en.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-04-17T12%3A30%3A14.969Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-04-17T13%3A33%3A01.310Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -33,13 +33,13 @@
                 <div id="navbar-items-container">
                     <ul class="navbar-items-list">
                         <li class="navbar-item">
-                            <a class="navbar-link" href="javascript:navbar.scrollToElement('chalet')">The Chalet</a>
+                            <a class="navbar-link" href="javascript:navbar.scrollToElement('chalet')">Chalet</a>
                         </li>
                         <li class="navbar-item">
                             <a class="navbar-link" href="javascript:navbar.scrollToElement('rooms')">Rooms</a>
                         </li>
                         <li class="navbar-item">
-                            <a class="navbar-link" href="javascript:navbar.scrollToElement('restaurant')">The restaurant bar</a>
+                            <a class="navbar-link" href="javascript:navbar.scrollToElement('restaurant')">Restaurant</a>
                         </li>
                         <li class="navbar-item">
                             <a class="navbar-link" href="javascript:navbar.scrollToElement('summer')">Summer</a>
@@ -48,7 +48,7 @@
                             <a class="navbar-link" href="javascript:navbar.scrollToElement('winter')">Winter</a>
                         </li>
                         <li class="navbar-item">
-                            <a class="navbar-link" href="javascript:navbar.scrollToElement('infos')">Useful Info</a>
+                            <a class="navbar-link" href="javascript:navbar.scrollToElement('infos')">Informations</a>
                         </li>
                     </ul>
                 </div>
@@ -116,7 +116,7 @@
 
         <section id="chalet" class="py-5 bg-light">
             <div class="container">
-                <h2>The Chalet</h2>
+                <h2>Chalet</h2>
                 <div class="row align-items-start">
                     <div class="col-12 col-md-6 mb-3">
                         <div id="carousel-chalet" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -301,7 +301,7 @@ Most of the bathrooms have been renovated and one bedroom offers you the possibi
 
         <section id="restaurant" class="py-5 dimmed with-background" style="background-image: url(&quot;images/restaurant.jpg&quot;);background-image: url(&quot;images/restaurant.webp&quot;)">
             <div class="container text-light">
-                <h2>The restaurant bar</h2>
+                <h2>Restaurant</h2>
                 <div class="d-flex row">
                     <div class="col-12 col-lg-6 custom-card">
                         <h3 class="card-title">The Restaurant</h3>
@@ -532,7 +532,7 @@ You may prefer well-being and fitness areas, snowshoe walks, ice skating, tobogg
 
         <section id="infos" class="py-5 bg-light">
             <div class="container">
-                <h2>Useful Info</h2>
+                <h2>Informations</h2>
                 <div class="row mt-4 text-left">
                     <div class="col-12 col-md-6">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2818.6986852073487!2d6.144188361692429!3d45.05133605999382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478a14f9ab5cfa9f%3A0x715585d673b12e46!2sLogis%20H%C3%B4tel%20le%20Panoramique!5e0!3m2!1sfr!2sfr!4v1680296381957!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="col-12 rounded" title="Carte" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -914,7 +914,7 @@ This website is under construction.
     </footer>
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-04-17T12%3A30%3A14.969Z"></script>
+    <script src="script/page.js?v=2023-04-17T13%3A33%3A01.310Z"></script>
 </body>
 
 </html>
