--- a/src/html/index.html
+++ b/src/html/index.html
@@ -556,7 +556,7 @@
                     </p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">#=(popup_close)</button>
                 </div>
             </div>
         </div>
