Text + udpate photo

--- a/website_old/index.html
+++ b/website_old/index.html
@@ -10,17 +10,30 @@
     <link rel="icon" href="cropped-IMG_4983-192x192.jpg" sizes="192x192">
 </head>
 
-<body style="padding:0;margin:0;font-family: Arial,Helvetica,sans-serif;font-size:1.25em">
+<body style="padding:0;margin:0;font-family: Arial,Helvetica,sans-serif;font-size:1.2em">
     <main>
         <section style="display:flex;flex-flow:column;justify-items:center;align-items:center;background:#67684A;background-position: center 0px;background-image: url(/images/header-background.jpg);background-image: url(/images/header-background.webp); background-size: cover;min-height: 100vh;">
-            <div style="box-shadow: 0px 0px 32px black;box-sizing:border-box;max-width:100%;width:800px;background:white;border-radius:8px;margin:auto;padding:16px 32px;max-height:90vh;overflow-y:auto">
-                <p>Bonjour</p>
-                <p>Premier paragraphe</p>
-                <p>Deuxième paragraphe</p>
-                <p>Troisième paragraphe</p>
-                <p style="text-align:center;">
-                    <img src="images/marcisabelle-768x576.jpg" alt="Isabelle et Marc" style="border-radius:8px;max-height:320px;max-width:100%;box-shadow: 0px 1px 4px rgba(0 0 0 / 40%);" />
+            <div style="box-shadow: 0px 0px 32px black;box-sizing:border-box;max-width:100%;width:800px;background:white;border-radius:8px;margin:auto;padding:0 32px;max-height:calc(100vh - 32px);overflow-y:auto">
+                <p>
+                    Après quinze ans à vous accueillir dans ce lieu qui nous a tant apporté et épanoui, le temps est maintenant venu de passer la main.
                 </p>
+                <p>
+                    Nous tenons à vous remercier encore pour tous ces moments partagés avec vous.
+                    Nous avons toute confiance en notre repreneur et nous pourrons ainsi profiter de notre retraite sereinement. Vous êtes en de bonnes mains.
+                </p>
+                <p style="text-align:right">
+                    Isabelle et Marc
+                </p>
+                <p style="text-align:center;">
+                    <img src="images/IMG_8627.jpg" alt="Isabelle et Marc" style="border-radius:8px;max-height:320px;max-width:100%;box-shadow: 0px 1px 4px rgba(0 0 0 / 40%);" />
+                </p>
+                <p>
+                    Si vous voulez nous contacter, voici notre adresse email: <a href="mailto:mamisasallenave63@gmail.com">mamisasallenave63@gmail.com</a>.
+                </p>
+                <p>
+                    Retrouvez Olivier sur le nouveau site du chalet: <a href="https://chalet-lepanoramique.fr">chalet-lepanoramique.fr</a>.
+                </p>
+
             </div>
         </section>
     </main>
