--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-04-22T23%3A00%3A57.397Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-04-23T07%3A59%3A41.710Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -307,12 +307,6 @@ La plupart des salles de bain ont été rénovées et une chambre vous offre la 
                 <h2>Le restaurant bar</h2>
                 <div class="d-flex row">
                     <div class="col-12 col-lg-6 custom-card">
-                        <div class="card-header">
-                            <picture>
-                                <source srcset="images/\restaurant/IMG_2564.webp">
-                                <img class="card-image rounded" src="images/\restaurant/IMG_2564.jpg" alt="Ski d'hiver">
-                            </picture>
-                        </div>
                         <h3 class="card-title">Le restaurant</h3>
                         <div class="card-body">
                             <p>
@@ -331,12 +325,6 @@ Le restaurant n'est ouvert que le soir pour le diner.
                         </div>
                     </div>
                     <div class="col-12 col-lg-6 custom-card">
-                        <div class="card-header">
-                            <picture>
-                                <source srcset="images/\restaurant/bar-hotel-panoramique.webp">
-                                <img class="card-image rounded" src="images/\restaurant/bar-hotel-panoramique.jpg" alt="Ski d'hiver">
-                            </picture>
-                        </div>
                         <h3 class="card-title">Le bar</h3>
                         <div class="card-body">
                             <p>
@@ -660,7 +648,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
                     <p>
                         Le site du Chalet Le Panoramique, répondant sur les domaines « chalet-lepanoramique.fr », est édité par :<br />
                         <span class="px-4 d-inline-block">
-                            EURL Olivier VINATY<br />
+                            EURL CHALET LE PANORAMIQUE<br />
                             227 Route d'Emparis<br />
                             38142 MIZOËN
                         </span>
@@ -669,7 +657,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
                     <p>
                         <span class="px-4 d-inline-block">
                             EURL au capital de 5.000€<br />
-                            RCS Grenoble xxxxxxxx<br />
+                            RCS Grenoble 95174534800015<br />
                             N° de TVA intracommunautaire : FRxxxxx
                         </span>
                     </p>
@@ -699,7 +687,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
                         Sauf autorisation, toute utilisation des Oeuvres autres que la reproduction et la consultation individuelles et privées sont interdites.
                     </p>
                     <p>
-                        L'EURL Olivier VINATY consent à l'utilisateur le droit de consultation de son site pour son usage strictement personnel et privé.
+                        L'EURL CHALET LE PANORAMIQUE consent à l'utilisateur le droit de consultation de son site pour son usage strictement personnel et privé.
                         Toute reproduction, rediffusion ou commercialisation totale ou partielle du contenu est interdite.
                     </p>
                     <p>Lire aussi notre engagement sur les données personnelles RGPD.</p>
@@ -897,7 +885,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
 
                     <h5>Responsable du traitement</h5>
                     <p>
-                        Tout traitement des informations personnelles communiquées au Chalet Le Panoramique est effectué sous la responsabilité la société EURL Olivier VINATY, 227 route d'Emparis, 38142 Mizoën, N° SIRET xxxxxxx.
+                        Tout traitement des informations personnelles communiquées au Chalet Le Panoramique est effectué sous la responsabilité la société EURL CHALET LE PANORAMIQUE, 227 route d'Emparis, 38142 Mizoën, N° SIRET xxxxxxx.
                     </p>
                     <p>
                         Pour toute question sur le traitement des données personnelles, ou toute demande d'accès, d'obtention, de portabilité, de rectification ou d'effacement de vos données personnelles, nous vous invitons à contacter me contacter à l'adresse mail : <a href="mailto:etaulier@chalet-lepanoramique.fr">letaulier@chalet-lepanoramique.fr</a>.
@@ -905,7 +893,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
 
                     <h5>Demandes de modifications de vos données personnelles</h5>
                     <p>
-                        En tant qu'utilisateur des services de la société EURL Olivier VINATY, vous pouvez modifier les données personnelles vous concernant depuis votre compte client.
+                        En tant qu'utilisateur des services de la société EURL CHALET LE PANORAMIQUE, vous pouvez modifier les données personnelles vous concernant depuis votre compte client.
                     </p>
                     <p>
                         Il est possible d'exporter vos données personnelles depuis votre compte client.
@@ -967,7 +955,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-04-22T23%3A00%3A57.397Z"></script>
+    <script src="script/page.js?v=2023-04-23T07%3A59%3A41.710Z"></script>
 </body>
 
 </html>
