--- a/website/index_raw.html
+++ b/website/index_raw.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-04-23T07%3A59%3A41.710Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-04-23T08%3A18%3A56.843Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -77,19 +77,19 @@
     <main>
         <section id="site-hero" class="d-flex justify-content-between flex-column header-background" style="background-position: center 0px;user-select: none;">
             <div id="hero-text" class="container text-white d-flex flex-column">
-                <div class="text-uppercase d-block" style="line-height:1em;font-size:.3em;letter-spacing:.2em;padding-left:.1em">
-                    #=(hero_upper)
+                <div class="text-uppercase d-flex justify-content-between" style="line-height:1em;font-size:.3em;letter-spacing:.15em;padding-left:.2em;padding-right:.2em;z-index:1">
+                    <span>#=(hero_upper)</span>
+                    <span id="lang-block">
+                        <a id="lang-fr" class="lang-item" href="/">fr</a>
+                        <a id="lang-en" class="lang-item" href="/index_en.html">en</a>
+                    </span>
                 </div>
                 <div class="heading d-block" style="line-height: 1em;font-size:1em">
                     #=(hero_middle)
                 </div>
-                <div class="text-uppercase d-block text-center" style="line-height:1em;font-size:.25em;letter-spacing:.15em;padding-left:.1em;padding-top:1em">
+                <div class="text-uppercase d-block text-center" style="line-height:1em;font-size:.3em;letter-spacing:.15em;padding-left:.2em;padding-top:1em">
                     #=(hero_lower)
                 </div>
-                <span id="lang-block">
-                    <a id="lang-fr" class="lang-item" href="/">fr</a>
-                    <a id="lang-en" class="lang-item" href="/index_en.html">en</a>
-                </span>
             </div>
 
             <a href="https://www.bike-oisans.com" target="_blank">
@@ -920,7 +920,7 @@
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-04-23T07%3A59%3A41.710Z"></script>
+    <script src="script/page.js?v=2023-04-23T08%3A18%3A56.843Z"></script>
 </body>
 
 </html>
