--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-04-23T12%3A24%3A21.629Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-04-23T15%3A26%3A27.838Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -75,7 +75,7 @@
     </header>
 
     <main>
-        <section id="site-hero" class="d-flex justify-content-between flex-column header-background" style="background-position: center 0px;user-select: none;">
+        <section id="site-hero" class="d-flex justify-content-between flex-column header-background" style="background-color:#24669D;background-position: center 0px;user-select: none;">
             <div id="hero-text" class="container text-white d-flex flex-column">
                 <div class="text-uppercase d-flex justify-content-between" style="line-height:1em;font-size:.3em;letter-spacing:.15em;padding-left:.2em;padding-right:.2em;z-index:1">
                     <span>Bienvenue au chalet hôtel</span>
@@ -946,7 +946,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-04-23T12%3A24%3A21.629Z"></script>
+    <script src="script/page.js?v=2023-04-23T15%3A26%3A27.838Z"></script>
 </body>
 
 </html>
